--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.0",
+    "recharts": "^2.15.0",
     "styled": "^1.0.0",
     "styled-components": "^6.1.13"
   },
